Package: async
==============

Version: 0.1.2 [2015-04-21]
o Now inspect() also accepts complex input such as inspect(a$x),
  inspect(a[["x"]]) and inspect(a[[1]]).  It also accepts a 
  character name such as inspect("x", envir=a).
o Added error classes AsyncError and AsyncTaskError with more
  informative error messages simplifying troubleshooting.
o CLEANUP: Now async BatchJobs registries are created in ./.async/
o BUG FIX: Delayed (synchroneous and asynchroneous) assignments to
  listenv:s did not update the internal name-to-variable map, which
  effectively made such listenv:s object empty (although the assign
  value was stored internally).


Version: 0.1.1 [2015-04-07]
o BUG FIX: asyncBatchEvalQ() would given "Error in packageVersion(pkg) :
  package 'R_GlobalEnv'" if the expression had a global function defined
  in the global environment.  Now asyncBatchEvalQ() does a better jobs
  in identifying package names.  Added package tests for this case.


Version: 0.1.0 [2015-02-07]
o First prototype of an old idea of asynchronous evaluations with
  delayed assignments.
o Created.